5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1596_1571.log
== TEST (2019-03-26 19:21:20) 
-- CODE:
#definimos a variavel das letras
letras="janio heron pollmeier neves"
print=(letras.upper())

-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:21:23) 
-- CODE:
#definimos a variavel das letras
letras="janio heron pollmeier neves"
print=(letras.upper())

-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:22:22) 
-- CODE:
#definimos a variavel do texto
texto="janio dono da programaçao"
print=(letras.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print=(letras.upper())
NameError: name 'letras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:23:05) 
-- CODE:
#definimos a variavel do texto
texto="janio dono da programaçao"
print(letras.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(letras.upper())
NameError: name 'letras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:23:29) 
-- CODE:
#definimos a variavel do texto
texto="janio dono da programaçao"
print(texto.upper())
-- OUTPUT:
JANIO DONO DA PROGRAMAÇAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:24:02) 
-- CODE:
#definimos a variavel do texto
texto="janio heron"
print(texto.upper())
-- OUTPUT:
JANIO HERON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:24:21) 
-- CODE:
#definimos a variavel do texto
texto="janio heron poderosissimo como a espada de um samurai"
print(texto.upper())
-- OUTPUT:
JANIO HERON PODEROSISSIMO COMO A ESPADA DE UM SAMURAI
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:24:25) 
-- CODE:
#definimos a variavel do texto
texto="janio heron poderosissimo como a espada de um samurai"
print(texto.upper())
-- EXECUTION TIME:
0.178761
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
JANIO HERON PODEROSISSIMO COMO A ESPADA DE UM SAMURAI
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:24:57) 
-- CODE:
#definimos a variavel do texto
texto=input("texto")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:25:20) 
-- CODE:
#definimos a variavel do texto
texto=input("texto")
print(texto.upper())
-- EXECUTION TIME:
0.161278
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
